ajuste en nosotros, pendiente formulario

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -15,9 +15,7 @@
 </head>
 
 <body>
-
-    <!-- ENCABEZADO -->
-        <header class="head flex justify-content-between align-items-center p-3">
+    <header class="head flex justify-content-between align-items-center p-3">
         <div class="logo">
             <a href="#"><img src="img/LOGO.jpg" alt="Logo de An&Plast" class="w-full" style="max-height: 50px;"></a>
         </div>
@@ -27,69 +25,87 @@
             <a href="formulario.html">Contacto</a>
             <a href="productos.html">Productos</a>
         </nav>
-             </header>
-   <div> <img class="mainpic" src="img/empleadosfondo.webp" alt=""></div>
+    </header>
+    <div><img class="mainpic" src="img/empleadosfondo.webp" alt=""></div>
 
-                        <br><br><br><br><br><br><br>
-    
- <!-- SECCIÓN NOSOTROS -->
-<section class="about">
-    <div class="container">
-        <div class="imagentexto">
-            <img class="nimagen" src="img/LOGO.jpg" alt="imagen empresa">
+    <section class="about">
+        <div class="container">
+            <div class="imagentexto">
+                <img class="nimagen" src="img/LOGO.jpg" alt="imagen empresa">
+            </div>
+            <div class="about-text">
+                <h2 class="title">¿Quiénes somos?</h2>
+                <p>
+                    Ubicados en Bogotá D.C., somos una empresa 100% colombiana con 20 años de experiencia en la
+                    fabricación, comercialización y venta de empaques plásticos de alta y baja densidad. Nos
+                    especializamos en productos pre cortados e impresos, diseñados para satisfacer las diversas
+                    necesidades de la industria.
+                    Desde nuestra fundación el 24 de junio de 2005, nos hemos consolidado como un referente en el
+                    mercado gracias a nuestro compromiso con la innovación, la calidad y la atención personalizada a
+                    nuestros clientes.
+                </p>
+            </div>
         </div>
-        <div class="about-text">
-            <h2 class="title">¿Quiénes somos?</h2>
+    </section>
+
+    <section class="mission-vision">
+        <div class="container">
+            <h2 class="title">Nuestra Misión</h2>
             <p>
-                Ubicados en Bogotá D.C., somos una empresa 100% colombiana con 20 años de experiencia en la
-                fabricación, comercialización y venta de empaques plásticos de alta y baja densidad. Nos
-                especializamos en productos pre cortados e impresos, diseñados para satisfacer las diversas
-                necesidades de la industria.<br><br>
-                Desde nuestra fundación el 24 de junio de 2005, nos hemos consolidado como un referente en el
-                mercado gracias a nuestro compromiso con la innovación, la calidad y la atención personalizada a
-                nuestros clientes.
-                <br><br>
+                Fabricar y distribuir empaques flexibles para todo tipo de industria, logrando satisfacer y cubrir las necesidades
+                de nuestros clientes en diseño, desarrollo, fabricación y comercialización. Contamos con personal calificado y
+                tecnología de vanguardia para ser la mejor opción en el mercado, con responsabilidad ambiental y social.
+            </p><br><br>
+            <h2 class="title">Nuestra Visión</h2>
+            <p>
+                Para el año 2025, ser reconocidos como líderes en la fabricación de soluciones de envasado plástico de alta calidad y
+                sostenibles. Buscamos transformar la forma en que se conciben y utilizan las bolsas plásticas, promoviendo prácticas
+                responsables para el éxito sostenible de nuestros clientes y el planeta.
             </p>
         </div>
-    </div>
-</section>
-                            <br><br><br><br><br><br><br>
+    </section>
 
-<footer class="footer">
-    <div class="footer-container">
-        <div class="footer-info">
-            <h3>Contacto</h3>
-            <p><i class="fas fa-map-marker-alt"></i> Transversal 95 bis a # 25d 41</p>
-            <p><i class="fas fa-envelope"></i> anplastcontabil@gmail.com</p>
-            <p><i class="fas fa-phone"></i> +57 312 513 2757</p>
-            <p><i class="fas fa-phone"></i> +57 312 513 2757</p>
+    <section class="bpm-process">
+        <div class="container">
+            <h2 class="title">Procesos BPM</h2>
+            <p>
+                Nuestra Política de Calidad Sanitaria garantiza el desarrollo de nuestras actividades bajo los lineamientos de Buenas
+                Prácticas de Manufactura. Nos comprometemos a brindar productos y servicios que cumplan con las especificaciones
+                técnicas y comerciales, manteniendo nuestra competitividad en el mercado.
+            </p>
+            <p>
+                Contamos con un equipo capacitado, proveedores evaluados, un sistema administrativo eficiente y equipos en óptimas
+                condiciones para la inocuidad de nuestros productos.
+            </p>
         </div>
+    </section>
 
-        <div class="footer-social">
-            <h3>Síguenos</h3>
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-info">
+                <h3>Contacto</h3>
+                <p><i class="fas fa-map-marker-alt"></i> Transversal 95 bis a # 25d 41</p>
+                <p><i class="fas fa-envelope"></i> anplastcontabil@gmail.com</p>
+                <p><i class="fas fa-phone"></i> +57 312 513 2757</p>
+            </div>
+
+            <div class="footer-social">
+                <h3>Síguenos</h3>
+                <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+            </div>
         </div>
-    </div>
-    
-    <div class="footer-bottom">
-        <p class="derechos">&copy; 2025 AnPlast. Todos los derechos reservados.</p>
-    </div>
-</footer>
+        <div class="footer-bottom">
+            <p class="derechos">&copy; 2025 AnPlast. Todos los derechos reservados.</p>
+        </div>
+    </footer>
 
-<!-- Font Awesome para los iconos -->
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
-
-<!-- Librería Font Awesome -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-
-<!-- Botón de WhatsApp -->
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-<a href="https://wa.me/3180275326" target="_blank" class="whatsapp-button">
-    <i class="fab fa-whatsapp"></i>
-</a>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <a href="https://wa.me/3180275326" target="_blank" class="whatsapp-button">
+        <i class="fab fa-whatsapp"></i>
+    </a>
 </body>
+
 </html>
